--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,16 @@ language: go
 go:
   - "1.12"
   - tip
+
 matrix:
   allow_failures:
     - go: tip
+
+before_install:
+  - go get -t -v ./...
+
+script:
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
