--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,4 +13,6 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
     - name: Test
-      run: go test -v ./...
+      run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
+    - name: Publish Coverage
+      run: bash <(curl -s https://codecov.io/bash) || true
